--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Us</h1>
-                <p><i class="fas fa-paper-plane"></i> genesisecogroup@gmail.com</p>
+                <p><i class="fas fa-paper-plane"></i> jrubio@genesisecogroup.com</p>
                 <p><i class="fas fa-solid fa-phone"></i> 4073102956</p>
                 <div class="social-icons">
                     <a href="https://www.instagram.com/genesisecogroup/"><i class="fa-brands fa-instagram"></i></a>
